--- a/FakeXrmEasy.9/packages.config
+++ b/FakeXrmEasy.9/packages.config
@@ -15,8 +15,9 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.8" targetFramework="net462" />
   <package id="Microsoft.Extensions.Options" version="3.1.8" targetFramework="net462" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.8" targetFramework="net462" />
-  <package id="Microsoft.Identity.Client" version="4.35.1" targetFramework="net462" />
-  <package id="Microsoft.Identity.Client.Extensions.Msal" version="2.18.9" targetFramework="net462" />
+  <package id="Microsoft.Identity.Client" version="4.47.2" targetFramework="net462" />
+  <package id="Microsoft.Identity.Client.Extensions.Msal" version="2.24.0" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="6.25.0" targetFramework="net462" />
   <package id="Microsoft.PowerPlatform.Dataverse.Client" version="1.0.23" targetFramework="net462" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.20" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net462" />
@@ -26,7 +27,7 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net462" />
   <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net462" />
-  <package id="System.Text.Json" version="6.0.2" targetFramework="net462" />
+  <package id="System.Text.Json" version="6.0.6" targetFramework="net462" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
 </packages>
