--- a/FakeXrmEasy.9/packages.config
+++ b/FakeXrmEasy.9/packages.config
@@ -15,8 +15,8 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="7.0.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.Options" version="7.0.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.Primitives" version="7.0.0" targetFramework="net462" />
-  <package id="Microsoft.Identity.Client" version="4.48.1" targetFramework="net462" />
-  <package id="Microsoft.Identity.Client.Extensions.Msal" version="2.25.0" targetFramework="net462" />
+  <package id="Microsoft.Identity.Client" version="4.57.0" targetFramework="net462" />
+  <package id="Microsoft.Identity.Client.Extensions.Msal" version="4.57.0" targetFramework="net462" />
   <package id="Microsoft.IdentityModel.Abstractions" version="6.25.0" targetFramework="net462" />
   <package id="Microsoft.PowerPlatform.Dataverse.Client" version="1.0.26" targetFramework="net462" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.24" targetFramework="net462" />
@@ -24,9 +24,13 @@
   <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net462" />
   <package id="System.Diagnostics.DiagnosticSource" version="7.0.0" targetFramework="net462" />
+  <package id="System.IO.FileSystem.AccessControl" version="5.0.0" targetFramework="net462" />
   <package id="System.Memory" version="4.5.5" targetFramework="net462" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net462" />
+  <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.ProtectedData" version="4.5.0" targetFramework="net462" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net462" />
   <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net462" />
   <package id="System.Text.Json" version="7.0.0" targetFramework="net462" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net462" />
